# tightrope

./: README.md  pyproject.toml  requirements.txt
notebooks/: examples.ipynb
scripts/: README.md  utils.py
src/: sde.py
src/tightrope/: __init__.py  normaldiffpriorgfn.py  normalgfn.py  utils.py
src/tightrope/jax/: __init__.py  normaldiffpriorgfn.py  utils.py
