[project]
name = "tightrope"
version = "0.0.1"
authors = [{name = "Adam Coogan", email = "dr.adam.coogan@gmail.com"}]
description = "Continuous GFlowNets in PyTorch"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []
dependencies = ["torch", "torchsde", "torchtyping", "torchvision"]

[project.urls]
homepage = "https://github.com/adam-coogan/tightrope"
repository = "https://github.com/adam-coogan/tightrope"
documentation = "https://tightrope.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
